// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render as an H1 1`] = `
<Heading
  appearance="H1"
>
  <styled.h1
    as="h1"
  >
    <h1
      className="sc-AykKC choAwF"
    >
      Hello World
    </h1>
  </styled.h1>
</Heading>
`;

exports[`Heading should render as an H2 1`] = `
<Heading
  appearance="H2"
>
  <styled.h1
    as="h2"
  >
    <h2
      className="sc-AykKC gSgKAN"
    >
      Hello World
    </h2>
  </styled.h1>
</Heading>
`;

exports[`Heading should render as an H3 1`] = `
<Heading
  appearance="H3"
>
  <styled.h1
    as="h3"
  >
    <h3
      className="sc-AykKC bqYXNW"
    >
      Hello World
    </h3>
  </styled.h1>
</Heading>
`;

exports[`Heading should render as an H4 1`] = `
<Heading
  appearance="H4"
>
  <styled.h1
    as="h4"
  >
    <h4
      className="sc-AykKC ga-Dkwf"
    >
      Hello World
    </h4>
  </styled.h1>
</Heading>
`;

exports[`Heading should render as an H5 1`] = `
<Heading
  appearance="H5"
>
  <styled.h1
    as="h5"
  >
    <h5
      className="sc-AykKC XKOaj"
    >
      Hello World
    </h5>
  </styled.h1>
</Heading>
`;

exports[`Heading should render as an H6 1`] = `
<Heading
  appearance="H6"
>
  <styled.h1
    as="h6"
  >
    <h6
      className="sc-AykKC iAAQMf"
    >
      Hello World
    </h6>
  </styled.h1>
</Heading>
`;
